# rc_beam-risk_model

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yaml  netlify.toml  pyproject.toml  pyrightconfig.json  requirements.txt
api/: .dockerignore  Dockerfile  main.py
api/core/: config.py  lifespan.py
api/routers/: analyze.py  health.py  meta.py  playground.py  predict.py
api/schemas/: analysis.py  beam.py  meta.py  prediction.py
api/services/: analysis_service.py  dataset_service.py  model_service.py
data/: README.md
data/processed/: dataset.parquet
data/raw/: dataset.xlsx
docs/: PIPELINE.md  TESTING_PLAN.md
docs/figures/: README.md  fig_C1_case_I1_B1.json  fig_D1_classification_report.csv  fig_D2_frt_metrics.json  fig_E1_pytest_log.txt
experiments/: README.md  trial1_train_xgb.py  trial2_train_stack_suite.py  trial3_train_hybrid_ensemble.py  trial4_eval_resplits.py  trial5_generate_nudges.py  trial6_case_sheet.py  trial8_train_gate.py  trial9_debug_dump.py
models/: README.md
outputs/: README.md
scripts/: 01_scan.py  02_preprocess.py  05_train_hybrid.py  06_train_frt.py  12_case_analyzer.py  run_pipeline.py
src/: __init__.py
src/rcbeam_fire/: __init__.py  config.py
src/rcbeam_fire/analysis/: __init__.py  eurocode.py  insight.py
src/rcbeam_fire/dashboard/: __init__.py  app.py
src/rcbeam_fire/data/: __init__.py  preprocess.py  scan.py
src/rcbeam_fire/models/: blend.py  (+2 more)
tests/: conftest.py  test_case_analyzer.py  test_dashboard.py  test_metrics.py  test_schema.py
web/: next.config.ts  package-lock.json  package.json
(+38 files in other folders)
