[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcbeam-fire"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "matplotlib==3.8.4",
    "joblib==1.4.2",
    "pyyaml==6.0.2",
    "xgboost==2.0.3",
    "lightgbm==4.3.0",
    "imbalanced-learn==0.12.3",
    "seaborn==0.13.2",
    "openpyxl==3.1.5",
    "pyarrow>=12.0.0",
    "streamlit==1.37.0",
    "shap==0.46.0",
]

[tool.setuptools.packages.find]
where = ["src"]
