[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcbeam-fire"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "matplotlib>=3.8",
    "joblib>=1.4",
    "pyyaml>=6.0",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "imbalanced-learn>=0.12",
    "seaborn>=0.13",
    "openpyxl>=3.1",
    "pyarrow>=12.0",
    "streamlit>=1.37",
    "shap>=0.46",
]

[tool.setuptools.packages.find]
where = ["src"]
